--- a/assets/styles/scss/_global.scss
+++ b/assets/styles/scss/_global.scss
@@ -58,7 +58,145 @@ POSTS & CONTENT STYLES
 		padding: 10px;
 		}
 
-} 
+}
+
+// Custom styles for the header
+
+$subnav-hero-bg: $primary-color;
+$subnav-hero-link-padding: 0.9rem 1rem;
+$subnav-hero-font-size: 0.75rem;
+$subnav-hero-link-opacity: 0.15;
+$subnav-hero-height: 300px;
+$subnav-hero-transition: all 0.35s ease-in-out;
+
+.subnav-hero-section {
+  text-align: center;
+  background: $subnav-hero-bg;
+  background-size: cover;
+  position: relative;
+  overflow: visible;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: $subnav-hero-height;
+
+  .subnav-hero-headline {
+    color: $white;
+  }
+}
+
+.subnav-hero-subnav {
+  float: none;
+  position: absolute;
+  text-align: center;
+  margin: 0 auto;
+  justify-content: center;
+  bottom: 0;
+  width: 100%;
+
+  li {
+    float: none;
+    display: inline-block;
+
+    a {
+      padding: $subnav-hero-link-padding;
+      font-size: $subnav-hero-font-size;
+      color: $white;
+      text-transform: uppercase;
+      display: block;
+      font-weight: bold;
+      letter-spacing: 1px;
+      transition: $subnav-hero-transition;
+
+      &.is-active {
+        background: rgba($white, $subnav-hero-link-opacity);
+      }
+
+      &:hover {
+        background: rgba($white, $subnav-hero-link-opacity);
+      }
+    }
+  }
+}
+
+.archive {
+	.subnav-hero-subnav {
+		position: relative;
+	}
+	.subnav-hero-subnav li a {
+		color: $menu-item-background-active;
+	}
+	.menu .active>a, .menu .is-active>a {
+		color: #fefefe;
+	}
+}
+
+// For cards with grid and thumbnail
+.card-grid {
+  
+  .card-info {
+	padding: 1rem;
+	display: grid;
+	grid-template-rows: 1fr 2.5rem;
+	grid-template-columns: 3fr 1fr;
+  }
+  .card-category {
+	grid-row: 2 / 3;
+	grid-column: 1 / 2;
+	align-self: bottom;
+	text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+  .card-star {
+	grid-row: 1 / 2;
+	grid-column: 2 / 3;
+	justify-self: right;
+	display: grid;
+	justify-items: center;
+	align-items: baseline;
+	position: relative;
+		> span {
+			position: absolute;
+			align-items: initial;
+			display: flex;
+			align-self: baseline;
+			top: 15px;
+			font-weight: 100;
+			font-size: 14px;
+		}
+	&:after {		
+		content: '';
+		background-image: url('../images/star.svg');
+		background-size: 45px 45px;
+		width: 45px;
+		height: 45px;
+		grid-column: inherit;
+	}
+
+  }
+
+  .card-star
+  
+  .card-author {
+	grid-row: 3 / 3;
+	grid-column: 1 / 2;
+	align-self: bottom;
+  }
+  
+  .card-stats {
+	align-self: bottom;
+	justify-self: right;
+	display: none;
+   
+  }
+}
+.article-header {
+	.title {
+		font-size:1.1875rem;
+	}
+}
+
 
 .wp-caption {
 	max-width: 100%;
