--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /******************************************************************
-Theme Name: JointsWP - Sass
-Theme URI: http://www.jointswp.com
+Theme Name: Atomixstar
+Theme URI: http://www.atomixstar.com
 Description: 
 Author: Your Name Here
-Author URI: http://www.yoururlhere.com
+Author URI: http://www.atomixstar.com
 Version: 5.0 (Development)
 License: GNU General Public License & MIT
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
